# agent-did

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  good-first-issue.yml  integration-proposal.yml  rfc-feedback.yml
.github/assets/avatar/: generate_avatar.py
.github/workflows/: ci-crewai.yml  ci-integration-governance.yml  ci-microsoft-agent-framework.yml  ci-python.yml  ci-semantic-kernel.yml  ci.yml  contract-audit.yml  publish-python-sdk.yml
contracts/: audit-triage-rules.json  package.json
contracts/src/: AgentRegistry.sol
contracts/test/: AgentRegistry.test.js
docs/: Anti-Replay-HTTP-Signatures.md  Complete-Agent-DID-SDK-Course-EN.md  Complete-Agent-DID-SDK-Course-ES.md  Curso-2h-RFC-001.md  Curso-Completo-Agent-DID-SDK.md  DEPRECATION-POLICY.md  Documentation-Governance.md  F1-03-LangChain-Integration-Parity-Review-Checklist.md  F1-03-LangChain-Python-Implementation-Checklist.md  F1-03-LangChain-Python-Integration-Design.md  F1-03-LangChain-TS-Python-Integration-Parity-Matrix.md  F2-01-Python-SDK-Blueprint.md  F2-01-TS-Python-Parity-Matrix.md  F2-04-Microsoft-Agent-Framework-Implementation-Checklist.md  F2-04-Microsoft-Agent-Framework-Integration-Design.md  F2-04-Microsoft-Agent-Framework-Integration-Review-Checklist.md  F2-04-Semantic-Kernel-Implementation-Checklist.md  F2-04-Semantic-Kernel-Integration-Design.md  F2-04-Semantic-Kernel-Integration-Review-Checklist.md  F2-04-Semantic-Kernel-Maturity-Gap-Assessment.md  F2-04-Semantic-Kernel-Parity-Matrix.md  F2-05-CrewAI-Implementation-Checklist.md  F2-05-CrewAI-Integration-Design.md  F2-05-CrewAI-Integration-Review-Checklist.md  F2-05-CrewAI-LangChain-Maturity-Rubric.md  F2-05-CrewAI-Maturity-Gap-Assessment.md  F2-09-Microsoft-Agent-Framework-Implementation-Checklist.md  F2-09-Microsoft-Agent-Framework-Integration-Design.md  F2-09-Microsoft-Agent-Framework-Integration-Review-Checklist.md  F2-09-Microsoft-Agent-Framework-Maturity-Gap-Assessment.md  F2-09-Microsoft-Agent-Framework-Parity-Matrix.md  INDEX.md  PHILOSOPHY.md  RFC-001-Agent-DID-Specification.md  RFC-001-Compliance-Checklist.md  RFC-001-Implementation-Backlog.md  RFC-001-Resolver-HA-Runbook.md  RFC-001-Training-Manual.md  SDK-Release-Checklist.md  Strategic-Assessment-Agent-DID-EN.md  (+1 more)
docs/Analisis-criticas/: Project-Analysis-Report.md  agent-did-due-diligence-2026-03-29.md
fixtures/: canonical-document-reference.json  interop-vectors.json
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/examples/: agent_did_crewai_observability_example.py  agent_did_crewai_production_recipe_example.py
integrations/crewai/src/agent_did_crewai/: __init__.py  callbacks.py  guardrails.py  integration.py  observability.py  tools.py
integrations/crewai/tests/: test_observability.py  test_runtime_smoke.py  test_security.py  test_tool_operations.py  test_wiring.py
integrations/langchain-python/: README.md  pyproject.toml
integrations/langchain-python/src/agent_did_langchain/: __init__.py  tools.py
integrations/microsoft-agent-framework/: README.md  pyproject.toml
integrations/microsoft-agent-framework/examples/: agent_did_microsoft_agent_framework_advanced_workflow_recipe_example.py  agent_did_microsoft_agent_framework_mvp_example.py  agent_did_microsoft_agent_framework_production_recipe_example.py  agent_did_microsoft_agent_framework_workflow_recipe_example.py
integrations/microsoft-agent-framework/src/agent_did_microsoft_agent_framework/: __init__.py  config.py  integration.py  observability.py  sanitization.py  snapshot.py  tools.py
integrations/microsoft-agent-framework/tests/: test_context.py  test_integration.py  test_observability.py  test_runtime_smoke.py  test_security.py
integrations/semantic-kernel/: README.md  pyproject.toml
integrations/semantic-kernel/examples/: agent_did_semantic_kernel_mvp_example.py  agent_did_semantic_kernel_operational_recipe_example.py
integrations/semantic-kernel/tests/: conftest.py  test_context.py  test_integration.py  test_observability.py  test_runtime_smoke.py  test_security.py
scripts/: check-integration-governance.js  conformance-rfc001.js  contract-audit.js  e2e-smoke.js  regenerate-interop-vectors.js  resolver-ha-smoke.js  revocation-policy-smoke.js  rpc-resolver-smoke.js
sdk/: README.md  package-lock.json  package.json
sdk-python/: .coverage  LICENSE  README.md  pyproject.toml
sdk-python/examples/: did_wba_resolution.py  evm_registry_wiring.py
sdk-python/scripts/: conformance_rfc001.py  resolver_ha_smoke.py  rpc_resolver_smoke.py
sdk-python/src/agent_did_sdk/: __init__.py
sdk-python/src/agent_did_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk-python/src/agent_did_sdk/core/: http_security.py  identity.py  signer.py  time_utils.py  types.py
sdk-python/src/agent_did_sdk/crypto/: hash.py  multibase.py
sdk-python/src/agent_did_sdk/registry/: evm_registry.py  evm_types.py  in_memory.py  types.py  web3_client.py
sdk-python/src/agent_did_sdk/resolver/: http_source.py  in_memory.py  jsonrpc_source.py  types.py  universal.py
sdk-python/tests/: conftest.py  test_crypto.py  test_evm_registry.py  test_http_security.py  test_http_source.py  test_identity.py  test_in_memory_registry.py  test_in_memory_resolver.py  test_interop_vectors.py  test_jsonrpc_source.py  test_security_edge_cases.py  test_time.py  test_universal_resolver.py  test_web3_client.py
sdk-python/tests/fixtures/: interop-vectors.json
sdk/examples/: did-wba-resolution.js
sdk/examples/abi/: AgentRegistry.abi.json
sdk/src/: index.ts
sdk/src/core/: AgentIdentity.ts  http-security.ts  signer.ts  time.ts  types.ts
sdk/src/crypto/: hash.ts  multibase.ts
sdk/src/registry/: EthersAgentRegistryContractClient.ts  EvmAgentRegistry.ts  (+1 more)
sdk/tests/: AgentIdentity.test.ts  InteropVectors.test.ts  UniversalResolverClient.test.ts  crypto.test.ts  http-security.test.ts  time.test.ts
(+9 files in other folders)
