[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-did-sdk"
version = "0.1.0"
description = "Python SDK for the Agent-DID Specification (RFC-001) — create, sign, resolve, verify and revoke Agent-DIDs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "Agent-citizen-identification contributors" },
]
keywords = ["did", "agent", "identity", "decentralized", "web3", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Typing :: Typed",
]

dependencies = [
  "pydantic>=2.0",
  "pynacl>=1.5",
  "web3>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/edisonduran/Agent-citizen-identification#readme"
Repository = "https://github.com/edisonduran/Agent-citizen-identification.git"
Bug-Tracker = "https://github.com/edisonduran/Agent-citizen-identification/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"
plugins = ["pydantic.mypy"]
