[project]
name = "agent-did-langchain"
version = "0.0.0"
description = "Design scaffold for the Python Agent-DID integration with LangChain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Edison Munoz", email = "edison.munoz@agent-did.org" }
]
dependencies = []

[tool.agent-did]
status = "design-scaffold"
language = "python"
depends_on = "implementation"